# skill-lens

./: .gitignore  CONTEXT_FOR_ZED.md  NOTES.md  PROJECT_CARD.md  PROJECT_MANIFEST.md  README.md  docker-compose.yaml
airflow/: Dockerfile  README.md  async_divide_and_conquer_time_window_loader.py  async_greedy_walker_vacancies_loader.py  check_bronze_hh_loader_v3.ipynb  check_silver_hh_loader.ipynb  clean_async_divide_and_conquer_time_window_loader.py  clearn_v_log.txt  generate_hhru_auth_token.py  greedy_walker_output_anal.ipynb  hhru_all_areas_tree_example.txt  hhru_api_examples.ipynb  requirements.txt  single_thread_divide_and_conquer_time_windows.py  vacancies_query_params.txt
airflow/config/: airflow.cfg
airflow/dags/: bronze_hh_loader_dag.py  silver_hh_processor_dag.py  test_hhru_env.py  test_pytonic_dag.py
data/: README.md
historical-datasets/: README.md  kaggle_datasets.txt  parse-historical-datasets.ipynb  pyproject.toml  run_jupyter.sh
mlflow/: Dockerfile  mlflow_tracking_example.ipynb
